k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mctrack
  labels:
    name: mctrack
    environment: production
